# LedgerRAG

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
docs/: DEPLOY.md
frontend/: Dockerfile  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  ChatScopeSelector.tsx  DocumentsPanel.tsx  ElementEditor.tsx  KbCardMenu.tsx  KbDescription.tsx  KbSettings.tsx  ReviewPanel.tsx  Sidebar.tsx  SourceModal.tsx  ThemeToggle.tsx  ui.tsx
frontend/lib/: api.ts
scripts/: backup.sh  preflight.sh
spike/: README.md  REPORT.md  diagnose_tables.py  grade.py  make_gt_template.py  make_hard_tables.py  make_test_tables.py  parse_table.py  prompts.py
spike/tables/: index.json
tablerag/: __init__.py  indexing.py
tablerag/api/: main.py
tablerag/core/: auth.py  config.py  logging.py  numbers.py  queue.py  schemas.py  sparse.py  table_text.py
tablerag/ingestion/: chunking.py  confidence.py  extract.py  html_tables.py  imaging.py  layout.py  ocr.py  region_detect.py  table_pipeline.py  tasks.py  worker.py
tablerag/models/: __init__.py  base.py  ollama.py  openai_compat.py  registry.py  table_parsing.py
tablerag/query/: pipeline.py  verification.py
tablerag/scripts/: debug_context.py  reindex_all.py
tablerag/storage/: db.py  object_store.py  orm.py  qdrant.py  repositories.py
tests/integration/: test_e2e.py
tests/unit/: conftest.py  test_architecture.py  test_auth.py  test_bulk_delete.py  (+26 more)
(+42 files in other folders)
